input 수정 및 makeProduct제작중

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>hodu-market</title>
   </head>
   <body>
-    <a href="./src/adminpages/SellerCenter/index.html">seller</a>
+    <a href="./src/adminpages/makeProduct/index.html">안녕</a>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
