feat : makeProduct페이지 완성 단 데이터는 콘솔만 뜨고 검증은 안함

--- a/src/adminpages/makeProduct/index.html
+++ b/src/adminpages/makeProduct/index.html
@@ -55,114 +55,66 @@
               <legend class="sr-only">상품 이미지 업로드</legend>
               <p class="section-label">상품 이미지</p>
               <div class="image-upload-area">
-                <logo-imgicon isclick></logo-imgicon>
+                <logo-imgicon isclick name="image"></logo-imgicon>
               </div>
             </fieldset>
 
             <!-- 상품 정보 입력 -->
-            <fieldset class="product-info-section">
-              <legend class="sr-only">상품 정보 입력</legend>
-
-              <!-- 상품명 -->
+            <div class="product-info-section">
+              <h2 class="sr-only">상품 정보 입력</h2>
               <div class="form-group">
-                <label for="product-name">상품명</label>
-                <div class="input-wrapper">
-                  <input
-                    type="text"
-                    id="product-name"
-                    name="product-name"
-                    maxlength="20"
-                    placeholder="딥러닝 개발자 무릎 담요"
-                    required
-                    aria-required="true"
-                  />
-                  <span class="char-count"
-                    ><span class="current">0</span>/20</span
-                  >
+                <input-itemname name="name"></input-itemname>
+                <div class="input-price-wrapper">
+                  <input-price text="판매가" name="price"></input-price>
+                </div>
+                <!-- 배송방법 -->
+                <div class="delivery-group">
+                  <p class="group-label">배송방법</p>
+                  <input type="hidden" name="shipping_method" value="PARCEL" />
+                  <div class="delivery-buttons">
+                    <button-ms16p
+                      text="택배,소포,등기"
+                      value="PARCEL"
+                    ></button-ms16p>
+                    <button-ms16p
+                      text="직접배송(화물배달)"
+                      value="DELIVERY"
+                      variant="white"
+                    ></button-ms16p>
+                  </div>
+                </div>
+                <div class="input-price-wrapper">
+                  <input-price
+                    text="기본 배송비"
+                    name="shipping_fee"
+                  ></input-price>
+                </div>
+                <div class="input-price-wrapper">
+                  <input-price text="재고" name="stock"></input-price>
                 </div>
               </div>
-
-              <!-- 판매가 -->
-              <div class="form-group">
-                <label for="product-price">판매가</label>
-                <div class="input-with-unit">
-                  <input
-                    type="number"
-                    id="product-price"
-                    name="product-price"
-                    placeholder="17,500"
-                    required
-                    aria-required="true"
-                  />
-                  <span class="unit">원</span>
-                </div>
-              </div>
-
-              <!-- 배송방법 -->
-              <div class="form-group">
-                <p class="group-label">배송방법</p>
-                <div class="delivery-buttons">
-                  <button type="button" class="delivery-btn active">
-                    택배, 소포, 등기
-                  </button>
-                  <button type="button" class="delivery-btn">
-                    직접배송(화물배달)
-                  </button>
-                </div>
-              </div>
-
-              <!-- 기본 배송비 -->
-              <div class="form-group">
-                <label for="shipping-fee">기본 배송비</label>
-                <div class="input-with-unit">
-                  <input
-                    type="number"
-                    id="shipping-fee"
-                    name="shipping-fee"
-                    placeholder="2,500"
-                    required
-                    aria-required="true"
-                  />
-                  <span class="unit">원</span>
-                </div>
-              </div>
-
-              <!-- 재고 -->
-              <div class="form-group">
-                <label for="stock">재고</label>
-                <div class="input-with-unit">
-                  <input
-                    type="number"
-                    id="stock"
-                    name="stock"
-                    placeholder="300"
-                    required
-                    aria-required="true"
-                  />
-                  <span class="unit">개</span>
-                </div>
-              </div>
-            </fieldset>
+            </div>
           </div>
 
           <!-- 상품 상세 정보 -->
           <fieldset class="detail-section">
-            <legend class="sr-only">상품 상세 정보</legend>
-            <p class="section-label">상품 상세 정보</p>
-            <div class="editor-area">
-              <p class="editor-placeholder">에디터 영역</p>
-            </div>
+            <legend class="section-label">상품 상세 정보</legend>
+            <textarea
+              class="editor-area"
+              name="info"
+              placeholder="상품 상세 정보를 입력하세요"
+            ></textarea>
           </fieldset>
 
           <!-- 버튼 영역 -->
           <div class="button-group">
-            <button type="button" class="btn-cancel">취소</button>
-            <button type="submit" class="btn-submit">저장하기</button>
+            <button-ms16p text="취소" variant="white"></button-ms16p>
+            <button-ms16p text="저장하기" type="submit"></button-ms16p>
           </div>
         </form>
       </div>
     </main>
-
+    <bottom-footer></bottom-footer>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
