--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
    <header>
     <header-search></header-search>
   </header>
-  <a href="./src/adminpages/SellerCenter/index.html">seller</a>
-  
   <!-- 메인 슬라이드 섹션 -->
   <section class="slider-section">
     <h2 class="sr-only">메인 슬라이드</h2>
@@ -64,6 +62,7 @@
   <footer>
     <bottom-footer></bottom-footer>
   </footer>
+  <input-id></input-id>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
