feat:로그인 구현

--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -14,9 +14,17 @@
       <div class="login-box">
         <h1 class="title">로그인</h1>
 
-        <form class="login-form" action="#" method="post">
-          <input-id></input-id>
+        <!-- ✅ id 추가 -->
+        <form id="loginForm" class="login-form" action="#" method="post">
+          <!-- ✅ name 속성 추가 (컴포넌트가 자동으로 name="username" 생성) -->
+          <input-id placeholder="아이디"></input-id>
+
+          <!-- ✅ name 속성 추가 (컴포넌트가 자동으로 name="password" 생성) -->
           <input-id type="password" placeholder="비밀번호"></input-id>
+
+          <!-- ✅ 에러 메시지 표시 영역 추가 -->
+          <div class="validation-message" style="display: none"></div>
+
           <button-medium text="로그인"></button-medium>
         </form>
       </div>
@@ -28,12 +36,12 @@
       </nav>
     </div>
 
-    <!-- body 끝에 추가 -->
+    <!-- 컴포넌트 -->
     <script type="module" src="/src/component/logo/component.js"></script>
-    <!-- body 끝에 추가 -->
     <script type="module" src="/src/component/input/id.js"></script>
-    <script type="module" src="/src/component/input/password.js"></script>
-    <!-- body 끝에 추가 -->
     <script type="module" src="/src/component/button/medium.js"></script>
+
+    <!-- ✅ 로그인 로직 추가 -->
+    <script type="module" src="/src/pages/login/main.js"></script>
   </body>
 </html>
