feat: 전화번호 중복 검사 시 에러 메시지 표시 및 스타일 추가

--- a/src/pages/regist/index.html
+++ b/src/pages/regist/index.html
@@ -105,6 +105,7 @@
                   ></input-idcheck>
                 </div>
               </div>
+              <p class="phone-error-message" id="phoneErrorMessage"></p>
             </div>
           </div>
 
