판매자센터에서 상품등록 이동 완료

--- a/src/adminpages/SellerCenter/index.html
+++ b/src/adminpages/SellerCenter/index.html
@@ -18,7 +18,10 @@
           <h1>대시보드</h1>
           <span class="seller-name">백엔드글로벌</span>
         </div>
-        <button-msicon width="168px"></button-msicon>
+        <button-msicon
+          width="168px"
+          data-link="/src/adminpages/makeProduct/index.html"
+        ></button-msicon>
       </section>
       <div class="content-wrapper">
         <aside class="sidebar">
