--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -30,7 +30,7 @@
       </div>
 
       <nav class="links" aria-label="계정 관련 링크">
-        <a class="link" href="#">회원가입</a>
+        <a class="link" href="/src/pages/regist/index.html">회원가입</a>
         <span class="divider" aria-hidden="true">|</span>
         <a class="link" href="#">비밀번호 찾기</a>
       </nav>
