fix: 장바구니 기능 추가 및 API 연동

--- a/src/pages/shoppingCartPage/index.html
+++ b/src/pages/shoppingCartPage/index.html
@@ -30,8 +30,7 @@
 
         <!-- 장바구니 아이템 리스트 -->
         <div class="cart-items-list" id="cartItemsList">
-          <shoppingcart-item></shoppingcart-item>
-          <!-- 장바구니 아이템들이 여기에 동적으로 추가됩니다 -->
+          <!-- 장바구니 아이템들이 API에서 동적으로 추가됩니다 -->
         </div>
 
         <!-- 결제 정보 섹션 (장바구니에 상품이 있을 때만 표시) -->
