fixed: 상품디테일 페이지: 버튼 하나씩 활성화 문제&비로그인 상태에서 바로구매,장바구니 모달창 활성화

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <h2 class="sr-only">상품 목록</h2>
       <product-list></product-list>
     </section>
-
     <bottom-footer></bottom-footer>
+    <modal-check></modal-check>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
