--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -143,7 +143,19 @@
     <!-- 푸터 -->
     <bottom-footer></bottom-footer>
     <!-- 판매자 정보 모달 -->
-    <modal-check id="sellerModal" cancel-text="닫기" confirm-text="확인"></modal-check>
+    <modal-check
+      id="sellerModal"
+      cancel-text="닫기"
+      confirm-text="확인"
+    ></modal-check>
+    <!-- 로그인 안내 모달 -->
+    <modal-check
+      id="loginModal"
+      message="로그인이 필요한 서비스입니다.<br>로그인 하시겠습니까?"
+      cancel-text="아니오"
+      confirm-text="예"
+    >
+    </modal-check>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
