fixed: 프로덕트 디테일 페이지 주문수량과 가격 변동 연동 & 아래 버튼 탭 문제 해결

--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -156,6 +156,20 @@
       confirm-text="예"
     >
     </modal-check>
+    <!-- 장바구니 중복 상품 모달 -->
+    <modal-check
+      id="cartDuplicateModal"
+      message="이미 장바구니에 있는 상품입니다.<br>장바구니로 이동하시겠습니까?"
+      cancel-text="아니오"
+      confirm-text="예"
+    ></modal-check>
+    <!-- 재고 수량 초과 모달 -->
+    <modal-check
+      id="stockExceededModal"
+      message="재고 수량이 초과되었습니다."
+      cancel-text="아니오"
+      confirm-text="예"
+    ></modal-check>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
