--- a/src/pages/page404/index.html
+++ b/src/pages/page404/index.html
@@ -13,12 +13,12 @@
       content="페이지가 존재하지 않거나 사용할 수 없는 페이지입니다."
     />
     <title>404 - 페이지를 찾을 수 없습니다 | HODU MARKET</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/src/pages/page404/style.css" />
   </head>
   <body>
     <main class="error-page">
       <div class="error-icon">
-        <img src="../../assets/images/icon-404.png" alt="404 오류 아이콘" />
+        <img src="/src/assets/images/icon-404.png" alt="404 오류 아이콘" />
       </div>
 
       <div class="error-message">
@@ -43,6 +43,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="/src/pages/page404/main.js"></script>
   </body>
 </html>
