fixed: 결제페이지의 결제수단 checked 속성 적용으로 기본값 설정

--- a/src/pages/Payment/index.html
+++ b/src/pages/Payment/index.html
@@ -197,9 +197,19 @@
                   placeholder="상세주소를 입력하세요"
                 />
               </div>
-              <div class="section-divider" style="margin:0 0 8px;width:100%;height:1px;background:#C4C4C4;"></div>
+              <div
+                class="section-divider"
+                style="
+                  margin: 0 0 8px;
+                  width: 100%;
+                  height: 1px;
+                  background: #c4c4c4;
+                "
+              ></div>
               <div class="info-row">
-                <label class="info-label" for="deliveryMessage">배송 메시지</label>
+                <label class="info-label" for="deliveryMessage"
+                  >배송 메시지</label
+                >
                 <input
                   type="text"
                   class="info-input-large"
@@ -226,6 +236,7 @@
                   name="paymentMethod"
                   value="card"
                   class="payment-radio"
+                  checked
                 />
                 <span class="payment-method-text">신용/체크카드</span>
               </label>
