fix: 배송주소 필수 입력 항목 표시 추가

--- a/src/pages/Payment/index.html
+++ b/src/pages/Payment/index.html
@@ -180,7 +180,9 @@
                 </div>
               </div>
               <div class="info-row no-border">
-                <label class="info-label" for="postalCode">배송주소</label>
+                <label class="info-label" for="postalCode">
+                  배송주소 <span class="required-text">*필수</span>
+                </label>
                 <div class="address-input-group">
                   <input
                     type="text"
