fixed: 로그인창 판매자/구매자 구분탭 추가 & 판매자 프로덕트디테일 버튼 비활성화

--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -11,6 +11,13 @@
       <div class="icon">
         <logo-component></logo-component>
       </div>
+
+      <!-- 로그인 유형 선택 탭 -->
+      <div class="login-tabs">
+        <button-tab class="login-tab" text="구매회원 로그인" id="buyerTab" active></button-tab>
+        <button-tab class="login-tab" text="판매회원 로그인" id="sellerTab"></button-tab>
+      </div>
+
       <div class="login-box">
         <h1 class="title">로그인</h1>
 
