fix: Payment페이지 결제 관련 기능 개선

--- a/src/pages/Payment/index.html
+++ b/src/pages/Payment/index.html
@@ -28,7 +28,7 @@
           <div class="order-product-list" id="orderProductList">
             <payment-item
               product-id="1"
-              image="/src/assets/images/cart-Product-list.png"
+              image="/src/assets/images/icon-img.png"
               seller="백엔드글로벌"
               name="딥러닝 개발자 무릎 담요"
               price="17500"
@@ -39,7 +39,7 @@
 
             <payment-item
               product-id="2"
-              image="/src/assets/images/cart-Product-list.png"
+              image="/src/assets/images/icon-img.png"
               seller="우당탕탕 라이캣의 실험실"
               name="Hack Your Life 개발자 노트북 파우치"
               price="29000"
@@ -364,6 +364,7 @@
     <!-- 푸터 -->
     <bottom-footer></bottom-footer>
 
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
