메인페이지 물건슬라이드로 변경

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- 상품 목록 섹션 -->
     <section>
       <h2 class="sr-only">상품 목록</h2>
-      <product-list></product-list>
+      <product-items></product-items>
     </section>
     <bottom-footer></bottom-footer>
 
