fix: 결제 완료 모달 추가 및 관련 이벤트 처리 구현

--- a/src/pages/Payment/index.html
+++ b/src/pages/Payment/index.html
@@ -364,6 +364,13 @@
     <!-- 푸터 -->
     <bottom-footer></bottom-footer>
 
+    <modal-check
+      id="paymentSuccessModal"
+      message="결제가 완료되었습니다."
+      cancel-text="닫기"
+      confirm-text="확인"
+    ></modal-check>
+
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
