--- a/src/pages/productDetail/index.html
+++ b/src/pages/productDetail/index.html
@@ -167,6 +167,20 @@
       cancel-text="아니오"
       confirm-text="예"
     ></modal-check>
+    <!-- 장바구니 추가 성공 모달 -->
+    <modal-check
+      id="addToCartSuccessModal"
+      message="장바구니에 상품이 담겼습니다.<br>장바구니로 이동하시겠습니까?"
+      cancel-text="계속 쇼핑"
+      confirm-text="장바구니로 이동"
+    ></modal-check>
+    <!-- 장바구니 추가 실패 모달 -->
+    <modal-check
+      id="addToCartErrorModal"
+      message="장바구니 추가에 실패했습니다."
+      cancel-text="닫기"
+      confirm-text="확인"
+    ></modal-check>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
